# machine-learning-zoomcamp-homework

./: .gitignore  README.md  pyproject.toml
01-intro/: 01-intro-homework.ipynb
02-regression/: 02-regression-homework.ipynb
03-classification/: 03-classification-homework.ipynb
04-evaluation/: 04-evaluation-homework.ipynb
05-deployment/: predict.py  predict_v2.py  test.py  validate-q6.py  validate.py
06-trees/: 06-trees-homework.ipynb
08-deep-learning/: 08-deep-learning-homework.ipynb
09-serverless/: 09-serverless-homework.ipynb  lambda_function.py  lambda_function_v1.py
10-kubernetes/: README.md
midterm-project/: Dockerfile  README.md  index.html  notebook.ipynb  predict.py  pyproject.toml  test.py  validate.py
